fix: comment out flex-wrap property in Home component

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -2,7 +2,7 @@ section.home {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
 
     .profile-img {
         img {
